--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,17 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.14.3-pre2
+	minecraft_version=1.14.4
 	yarn_mappings=2
-	loader_version=0.4.8+build.154
+	loader_version=0.4.8+build.157
 
 # Mod Properties
-	mod_version = 2.2.0-beta.5
+	mod_version = 2.2.1
 	maven_group = de.siphalor
 	archives_base_name = tweed-api
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric
-	fabric_version = 0.2.7+build.127
+	fabric_version = 0.3.0+build.200
 	modmenu_version = +
 	clothconfig_version = +
